# lite3_contest_2026

./: .gitignore  README.md
config/: contest_params.yaml
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/launch/: arm_control.launch
src/arm_control/scripts/: arm_controller.py  grasp_task.py
src/common/: CMakeLists.txt  package.xml
src/common/msg/: InspectionResult.msg  MeterResult.msg  TaskStatus.msg
src/line_tracking/: CMakeLists.txt  package.xml
src/line_tracking/launch/: line_tracking.launch
src/line_tracking/scripts/: line_tracker.py
src/main_controller/: CMakeLists.txt  package.xml
src/main_controller/launch/: contest.launch  main_controller.launch
src/main_controller/scripts/: contest_fsm.py
src/meter_recognition/: CMakeLists.txt  package.xml
src/meter_recognition/launch/: meter_recognition.launch
src/meter_recognition/scripts/: inspection_task.py  letter_ocr.py  meter_reader.py
src/voice_broadcast/: CMakeLists.txt  package.xml
src/voice_broadcast/launch/: voice_broadcast.launch
src/voice_broadcast/scripts/: tts_broadcaster.py
