<?xml version="1.0"?>
<package format="2">
  <name>main_controller</name>
  <version>1.0.0</version>
  <description>Main FSM controller for Lite3 contest 2026</description>
  <maintainer email="team@example.com">Contest Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>common</depend>

  <exec_depend>line_tracking</exec_depend>
  <exec_depend>meter_recognition</exec_depend>
  <exec_depend>voice_broadcast</exec_depend>
  <exec_depend>arm_control</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
</package>
